syntax = "proto3";

package chatbot.modules.v1;

option go_package = "github.com/hrz8/altalune/gen/chatbot/modules/v1;chatbotmodulesv1";

import "buf/validate/validate.proto";

// CoreConfig defines the core runtime configuration for the chatbot inference server.
// Controls session management, streaming behavior, and flow handling.
message CoreConfig {
  // Whether the core module is enabled (always true for this module)
  bool enabled = 1;

  // Session management settings
  SessionSettings session = 2;

  // Streaming behavior settings
  StreamingSettings streaming = 3;

  // Static flow handler settings
  FlowSettings flow = 4;
}

// SessionSettings controls session lifecycle behavior
message SessionSettings {
  // Session time-to-live in seconds (default: 1800 = 30 minutes)
  // Range: 60 seconds to 24 hours
  int32 ttl_seconds = 1 [(buf.validate.field).int32 = {gte: 60, lte: 86400}];

  // Cleanup interval in seconds (default: 300 = 5 minutes)
  // Range: 30 seconds to 1 hour
  int32 cleanup_interval_seconds = 2 [(buf.validate.field).int32 = {gte: 30, lte: 3600}];

  // Default conversation mode when session starts: 'assistant', 'flow', or 'liveChat'
  string default_mode = 3 [(buf.validate.field).string = {
    in: ["assistant", "flow", "liveChat", ""]
  }];
}

// StreamingSettings controls text streaming behavior for typing effects
message StreamingSettings {
  // Delay between text chunks in milliseconds (default: 15)
  // Set to 0 for instant streaming without typing effect
  int32 text_delay_ms = 1 [(buf.validate.field).int32 = {gte: 0, lte: 200}];

  // Number of characters per chunk (default: 5)
  int32 chunk_size = 2 [(buf.validate.field).int32 = {gte: 1, lte: 100}];

  // Whether typing effect is enabled (default: true)
  bool typing_effect_enabled = 3;
}

// FlowSettings controls static flow execution behavior
message FlowSettings {
  // Maximum depth for chained goto executions (default: 10)
  // Prevents infinite loops in node graphs
  int32 max_goto_depth = 1 [(buf.validate.field).int32 = {gte: 1, lte: 100}];

  // Whether to use fallback response when no node matches (default: true)
  bool use_fallback_when_no_match = 2;
}
